Fix emoji rendering on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,7 +140,6 @@ main#content div#reading {
 }
 
 main#content .rec {
-    font-family: monospace;
     padding-left: 5px;
 }
 
